Updates styling and content, plus a bug fix

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@ layout: default
 
 <div class="banner" id="banner">
 	<p class="banner_text">Advanced Roofing provides roofing and cladding services for domestic and industrial construction.</p>
-	<p class="banner_text">We distinguish ourselves in the industry by our commitment to delivering a high standard of work and our honesty and integrity.</p>
+	<p class="banner_text">We distinguish ourselves in the industry by our commitment to delivering a high standard of work.</p>
 	<p class="banner_est">Established 2007</p>
 </div>
 
 <div class="about" id="about">
 	<h2>About our Director</h2>
-	<p>With more than 50 years in the field, company director David Hargreaves is an established figure in the roofing and construction industries in South Australia.</p>
+	<p>With more than 50 years in the field, company director David Hargreaves is an established figure in the roofing and construction industries in South Australia. He is known for his honesty and integrity, and extensive and deep knowledge of materials and construction.</p>
 </div>
 
 <div class="gallery" id="gallery">
